created a basic home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,4 +2,9 @@
   <div class="container">
   <h1>Welcome to Crazy Pets</h1>
   </div>
+
+
+   <body>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus id perspiciatis totam culpa deserunt vitae nihil, repudiandae, facere consequatur molestias nostrum. Ducimus asperiores doloremque, atque dolorum id modi omnis impedit?
+   </body>
 </div>
