added new view and backend logic

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,11 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.name {
+  font-weight: 800;
+  font-size: 24;
+}
+
+#pets {
+  list-style: none;
+}
