created a button to Add Pet (index.html) and a button to Book Pet (show.html)

--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -15,4 +15,6 @@
     <li> <b> Price to rent: $<%= pet.price %> </b> </li>
     <br>
   <% end %>
+
+  <%= link_to "Add Pet", new_pet_path %>
 </div>
