--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,8 +1,12 @@
-<h1><%= @pet.name %></h1>
+<div>
+  <h1><%= @pet.name %></h1>
 
-<ul></ul>
-    <li>  <%= image_tag("#{@pet.image_url}")%> </li>
-    <li> Description: <%= @pet.description %></li>
-    <li> Species: <%= @pet.species %></li>
-    <li> <b> Price to rent: $<%= @pet.price %> </b> </li>
-    <br>
+    <ul></ul>
+      <li>  <%= image_tag("#{@pet.image_url}")%> </li>
+      <li> Description: <%= @pet.description %></li>
+      <li> Species: <%= @pet.species %></li>
+      <li> <b> Price to rent: $<%= @pet.price %> </b> </li>
+      <br>
+
+    <%= link_to "Book Pet", new_pet_booking_path(@pet) %>
+</div>
