--- a/app/views/pets/my_pets.html.erb
+++ b/app/views/pets/my_pets.html.erb
@@ -1,2 +1,4 @@
 <h1>Users#my_pets</h1>
 <p>Find me in app/views/users/my_pets.html.erb</p>
+<div id = "my pets">
+  <h3>These are the pets we currently have on offer!</h3>
