--- a/app/views/pets/my_pets.html.erb
+++ b/app/views/pets/my_pets.html.erb
@@ -1,4 +1,6 @@
-<h1>Users#my_pets</h1>
-<p>Find me in app/views/users/my_pets.html.erb</p>
-<div id = "my pets">
-  <h3>These are the pets we currently have on offer!</h3>
+<div class="container">
+  <h1>Users#my_pets</h1>
+  <p>Find me in app/views/users/my_pets.html.erb</p>
+  <div id = "my pets">
+    <h3>These are the pets we currently have on offer!</h3>
+</div>
