--- a/app/views/pets/my_pets.html.erb
+++ b/app/views/pets/my_pets.html.erb
@@ -1,12 +1,9 @@
 <div class="container">
-  <h1>Users#my_pets</h1>
-  <p>Find me in app/views/users/my_pets.html.erb</p>
-  <div id = "my pets">
-    <h3>These are the pets we currently have on offer!</h3>
-  <h3>Your pets!</h3>
+  <div id = "pets">
+  <h1>Your pets!</h1>
   <% @my_pets.each do |pet| %>
   <ul></ul>
-    <li>  <%= image_tag("#{pet.image_url}")%> </li>
+    <li>  <%= image_tag("#{pet.image_url}", :height => "400")%> </li>
     <li class="name"> Name: <%= pet.name %> </li>
     <li> Description: <%= pet.description %></li>
     <li> Species: <%= pet.species %></li>
