removed default font on my_pets and my_bookings html

--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -1,3 +1,5 @@
+<%= render 'shared/navbar' %>
+<%= render 'shared/flashes' %>
 <div id = "my_bookings">
   <h3>Your bookings!</h3>
   <% @my_bookings.each do |booking| %>
