--- a/app/views/pets/my_pets.html.erb
+++ b/app/views/pets/my_pets.html.erb
@@ -1,9 +1,8 @@
 <div class="container">
-  <h1>Users#my_pets</h1>
-  <p>Find me in app/views/users/my_pets.html.erb</p>
+  <h1>This is a list of your unique friends!</h1>
+
   <div id = "my pets">
-    <h3>These are the pets we currently have on offer!</h3>
-  <h3>Your pets!</h3>
+
   <% @my_pets.each do |pet| %>
   <ul></ul>
     <li>  <%= image_tag("#{pet.image_url}")%> </li>
