created basic layout for different html

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,3 +4,10 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "footer";
+@import "banner";
+@import "button";
+@import "container";
+@import "card-product";
+@import "card-trip";
+@import "card";
+@import "font";
