--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -1,13 +1,16 @@
 <div id = "my_bookings" class = "container">
   <div>
-    <h3>Your bookings!</h3>
+    <h1>Your bookings!</h1>
   </div>
-  <div id = "pets">
+  <div class="card-product" id = "pets">
     <% @my_bookings.each do |booking| %>
     <ul></ul>
-      <li>  <%= image_tag("#{booking.pet.image_url}", :height => "400") %> </li>
-      <li> Pet: <%= booking.pet.name %> </li>
-      <li> Price: <%= booking.pet.price %></li>
-    <% end %>
+   <li><%= image_tag("#{booking.pet.image_url}", :height => "400") %> </li>
+    <div class="card-product-infos">
+    <li> Pet: <%= booking.pet.name  %> </li>
+    <li> Price: <%= booking.pet.price %></li>
+   <% end %>
+   </div>
+   </div>
   </div>
 </div>
