--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,12 +1,13 @@
 <div class="container">
   <h1><%= @pet.name %></h1>
-  <div id = "pets">
-    <ul></ul>
-      <li>  <%= image_tag("#{@pet.image_url}", :height => "400")%> </li>
-      <li> Description: <%= @pet.description %></li>
-      <li> Species: <%= @pet.species %></li>
-      <li> <b> Price to rent: $<%= @pet.price %> </b> </li>
-      <br>
-  </div>
-    <%= link_to "Book Pet", pet_bookings_path(@pet), method: :post %>
+  <%# <div id = "pets"> %>
+
+      <%= image_tag("#{@pet.image_url}", :height=> "200")%>
+
+      <p><strong>Description:</strong> <%= @pet.description %></p>
+      <p><strong>Species:</strong> <%= @pet.species %></p>
+      <p><strong>Price to rent:</strong> $<%= @pet.price %></p>
+    <%#<br>%>
+
+    <button class="btn-flat"><%= link_to "Book Pet", pet_bookings_path(@pet), method: :post %></button>
 </div>
