--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,8 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <div class="container-fluid">
+<div class="navbar border-bottom navbar-expand-sm navbar-light navbar-lewagon">
+  <div class="container">
     <%= link_to "#", class: "navbar-brand" do %>
-      <%= image_tag "https://image.freepik.com/free-vector/chameleon-logo-design-illustration_105179-58.jpg" %>
+      <%# <%= image_tag "https://image.freepik.com/free-vector/chameleon-logo-design-illustration_105179-58.jpg"%>
+      <%# Crazy Pets %>
     <% end %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,21 +13,23 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item active">
-            <%= link_to "Home",my_pets_path(current_user) , class: "nav-link" %>
+            <%= link_to "Home", pets_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
+          <li class="nav-item active">
+            <%= link_to "My Pets", my_pets_path(current_user), class: "nav-link"  %>
           </li>
-          <li class="nav-item dropdown">
-            <%= image_tag "https://media.istockphoto.com/photos/giraffe-in-front-of-kilimanjaro-mountain-picture-id488580536?b=1&k=20&m=488580536&s=170667a&w=0&h=c926PmOTAZPrho3kZzr68EN36kTruP3GHRHFmdi0vN8=", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
-            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "My Pets", my_pets_path(current_user), class: "dropdown-item" %>
-              <%= link_to "My Bookings", my_bookings_path(current_user), class: "dropdown-item" %>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-            </div>
+          <li class="nav-item active">
+            <%= link_to "My Bookings", my_bookings_path(current_user), class:"nav-link"  %>
           </li>
+          <li class="nav-item active">
+            <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"nav-link"  %>
+          </li>
+    </div>
+
+
+
         <% else %>
-          <li class="nav-item">
+          <li class="nav-item btn-flat">
             <%= link_to "Login", new_user_session_path, class: "nav-link" %>
           </li>
         <% end %>
