--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -2,11 +2,11 @@
   <h1>Add your crazy pet for rent to make $$$</h1>
 
   <%= simple_form_for [ @pet ] do |f| %>
+    <%= f.input :photo, as: :file %>
     <%= f.input :name %>
     <%= f.input :description %>
     <%= f.input :price %>
     <%= f.input :species %>
-    <%= f.input :image_url %>
     <%= f.submit "Add my pet", class: "btn btn-primary" %>
   <% end %>
 </div>
