--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,8 +1,10 @@
 <div class="container">
   <h1><%= @pet.name %></h1>
   <%# <div id = "pets"> %>
+      <% if @pet.photo.attached? %>
+        <%= cl_image_tag @pet.photo.key, height: 200 %>
+      <% end %>
 
-      <%= image_tag("#{@pet.image_url}", :height=> "200")%>
 
       <p><strong>Description:</strong> <%= @pet.description %></p>
       <p><strong>Species:</strong> <%= @pet.species %></p>
