--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -35,3 +35,18 @@
   padding: 16px;
   flex-wrap: wrap;
 }
+
+
+.card-product-show {
+  overflow: hidden;
+  height: 320px;
+  background: white;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  display: flex;
+  align-items: center;
+}
+
+.card-product-infos-show {
+  padding: 16px;
+  flex-wrap: wrap;
+}
