--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -17,6 +17,15 @@ h3 {
   font-size: 20px;
   font-weight: normal;
   color: rgb(0, 0, 0);
+  text-align: left;
+  margin-bottom: 12px;
+  margin-top: 12px;
+}
+
+.h3-index {
+  font-size: 20px;
+  opacity: 0.6;
+  color: rgb(0, 0, 0);
   text-align: center;
   margin-bottom: 12px;
   margin-top: 12px;
