--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1>Rent a crazy pet!</h1>
+  <h1>Rent a Crazy Pet!</h1>
 
   <div class="container">
     <h2>Take photos with a weird pet to make it look like you have an interesting life 😊</h2>
@@ -8,7 +8,7 @@
   </div>
 
     <%# <div id = "pets"> %>
-    <h3>These are the pets we currently have on offer:</h3>
+    <h3 class="h3-index">These are the pets we currently have on offer:</h3>
 
     <% @pets.each do |pet| %>
       <div class="card-product">
@@ -16,9 +16,9 @@
         <%= image_tag("#{pet.image_url}") %>
 
           <div class="card-product-infos">
-            <h3><%= pet.name %></h3>
+            <h3><strong><%= pet.name %></strong></h3>
             <h3>Price to rent: $<%= pet.price %></h3>
-            <button class="btn btn-flat"> <%= link_to "View Pet", pet_path(pet) %></button>
+            <button class="btn btn-flat-index"><%= link_to "View Pet", pet_path(pet) %></button>
           </div>
       </div>
     <% end %>
