--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,12 +1,13 @@
-<div class="contatiner">
-  <h1>Add your crazy pet for rent to make $$$</h1>
-
-  <%= simple_form_for [ @pet ] do |f| %>
-    <%= f.input :name %>
-    <%= f.input :description %>
-    <%= f.input :price %>
-    <%= f.input :species %>
-    <%= f.input :image_url %>
-    <%= f.submit "Add my pet", class: "btn btn-primary" %>
-  <% end %>
+<div class="container">
+  <h1>Rent Out Your Crazy Pet</h1>
+  <div class="create-pet">
+    <%= simple_form_for [ @pet ] do |f| %>
+      <%= f.input :name %>
+      <%= f.input :description %>
+      <%= f.input :price %>
+      <%= f.input :species %>
+      <%= f.input :image_url %>
+      <%= f.submit "Add my pet", class: "btn btn-primary" %>
+    <% end %>
+  </div>
 </div>
