--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <h1><%= @pet.name %></h1>
   <%# <div id = "pets"> %>
-
+    <div class="card-product-show">
       <%= image_tag("#{@pet.image_url}", :height=> "200")%>
+      <div class="card-product-infos-show">
+        <p><strong>Description:</strong> <%= @pet.description %></p>
+        <p><strong>Species:</strong> <%= @pet.species %></p>
+        <p><strong>Price to rent:</strong> $<%= @pet.price %></p>
+        <%#<br>%>
 
-      <p><strong>Description:</strong> <%= @pet.description %></p>
-      <p><strong>Species:</strong> <%= @pet.species %></p>
-      <p><strong>Price to rent:</strong> $<%= @pet.price %></p>
-    <%#<br>%>
-
-    <button class="btn-flat"><%= link_to "Book Pet", pet_bookings_path(@pet), method: :post %></button>
+        <button class="btn-flat"><%= link_to "Book Pet", pet_bookings_path(@pet), method: :post %></button>
+      </div>
+    </div>
 </div>
