updated the views w uploaded images

--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -6,8 +6,8 @@
     <% @my_bookings.each do |booking| %>
 
    <div class="card-product">
-      <% if @pet.photo.attached? %>
-          <%= cl_image_tag @pet.photo.key, height: 400 %>
+      <% if booking.pet.photo.attached? %>
+          <%= cl_image_tag booking.pet.photo.key, height: 400 %>
       <% end %>
 
         <div class="card-product-infos">
