created a h1 heading for pets home page

--- a/app/views/pets/home.html.erb
+++ b/app/views/pets/home.html.erb
@@ -3,6 +3,6 @@
     <h1 class="h1-landing"><strong>Ready to make a new friend?</strong></h1>
     <p>Search for new unique friends to book from our list of pets in Shanghai.</p>
 
-    <button class="btn btn-gradient"> <%= link_to "Get Started", new_user_session_path %> ></button>
+    <button class="btn-gradient"> <%= link_to "Get Started", new_user_session_path %></button>
   </div>
 </div>
