--- a/app/views/pets/edit.html.erb
+++ b/app/views/pets/edit.html.erb
@@ -2,11 +2,10 @@
   <h1>Update Your Crazy Pet</h1>
     <div class="create-pet">
       <%= simple_form_for [ @pet ] do |f| %>
-        <%= f.input :name %>
+        <%= f.input :photo, as: :file %>
         <%= f.input :description %>
         <%= f.input :price %>
         <%= f.input :species %>
-        <%= f.input :image_url %>
         <%= f.submit "Update", class: "btn btn-primary" %>
       <% end %>
     </div>
