--- a/app/views/pets/home.html.erb
+++ b/app/views/pets/home.html.erb
@@ -1,3 +1,7 @@
+
+<% if user_signed_in? %>
+  <% redirect_to pets_path %>
+<% end %>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1467302091917-c7ac18f83832?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);">
   <div class="container justify-content-center">
     <h1 class="h1-landing"><strong>Ready to make a new friend?</strong></h1>
