--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,4 +1,4 @@
-<div class="contatiner">
+<div class="container">
   <h1>Add your crazy pet for rent to make $$$</h1>
 
   <%= simple_form_for [ @pet ] do |f| %>
