--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -22,13 +22,19 @@
 }
 
 .btn-ghost {
-  color: #4A4A4A;
-  border: 1px solid #4A4A4A;
+  color: #ff8244;
+  border: 1px solid #E67E22;
   padding: 8px 24px;
   border-radius: 50px;
+  background: linear-gradient(#fb7d16, #f06305);
   font-weight: lighter;
-  opacity: 0.6;
+  /* opacity: 0.6; */
   transition: opacity 0.3s ease;
+}
+
+.btn-ghost a {
+  text-decoration: none;
+  color: white;
 }
 
 .btn-flat-centered {
@@ -44,11 +50,27 @@
   display: block;
 }
 
+.btn-flat-centered a {
+  text-decoration: none;
+  color: white;
+}
+
 .btn-flat-index {
   color: white;
   border: 2px solid #E67E22;
+  background: linear-gradient(#fb7d16, #f06305);
   padding: 8px 24px;
   border-radius: 4px;
   transition: background 0.3s ease;
   margin-bottom: 12px;
+}
+
+.btn-flat-index a {
+  text-decoration: none;
+  color: white;
+}
+
+.btn-gradient a {
+  text-decoration: none;
+  color: white;
 }
