--- a/app/assets/stylesheets/components/_card-product.scss
+++ b/app/assets/stylesheets/components/_card-product.scss
@@ -1,30 +1,32 @@
 .card-product {
   overflow: hidden;
-  height: 180px;
+  height: 200px;
+  width: 500px;
   background: white;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
   display: flex;
   align-items: center;
   margin-bottom: 12px;
-
-}
-
-.card-product img {
-  height: 100%;
-  width: 120px;
-  object-fit: cover;
-  padding: 4px;
   border-radius: 4px;
 }
 
+.card-product img {
+  height: 180px;
+  width: 180px;
+  object-fit: cover;
+  padding: 4px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px rgb(255, 123, 0);
+}
+
 .card-product h2 {
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
   margin: 0;
 }
 
 .card-product p {
-  font-size: 12px;
+  font-size: 16px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
@@ -49,4 +51,12 @@
 .card-product-infos-show {
   padding: 16px;
   flex-wrap: wrap;
+}
+
+.card-product-img-show {
+  height: 100%;
+  width: 120px;
+  object-fit: cover;
+  padding: 4px;
+  border-radius: 4px;
 }
