--- a/app/views/pets/show.html.erb
+++ b/app/views/pets/show.html.erb
@@ -10,7 +10,7 @@
         <p><strong>Species:</strong> <%= @pet.species %></p>
         <p><strong>Price to rent:</strong> $<%= @pet.price %></p>
         <%#<br>%>
-        <% if @pet.user = !current_user %>
+        <% if @pet.user != current_user %>
           <button class="btn-flat"><%= link_to "Book Pet", pet_bookings_path(@pet), method: :post %></button>
         <% end %>
       </div>
