--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -15,7 +15,7 @@
               <%# <ul></ul> %>
               <% if pet.photo.attached? %>
                 <%#= cl_image_tag pet.photo.key, height: 400, crop: :fill %>
-                <%= cl_image_tag pet.photo.key, transformation: {height: 400, crop: :fill} %>
+                <%= cl_image_tag pet.photo.key %>
 
               <% end %>
               <%#= image_tag("#{pet.image_url}") %>
