--- a/app/views/pets/index.html.erb
+++ b/app/views/pets/index.html.erb
@@ -14,8 +14,8 @@
             <div class="card-product">
               <%# <ul></ul> %>
               <% if pet.photo.attached? %>
-                <%#= cl_image_tag pet.photo.key, height: 400, crop: :fill %>
-                <%= cl_image_tag pet.photo.key %>
+                <%= cl_image_tag pet.photo.key, height: 400, crop: :fill %>
+
 
               <% end %>
               <%#= image_tag("#{pet.image_url}") %>
