added css styling to new pet and edit forms

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,3 +10,10 @@
 .navbar-lewagon .navbar-brand img {
   width: 50px;
 }
+
+.h1-navbar {
+  font-size: x-large;
+  font-style: normal;
+  text-align: left;
+  font-weight: bolder;
+}
