--- a/app/views/pets/home.html.erb
+++ b/app/views/pets/home.html.erb
@@ -1,10 +1,8 @@
-
-
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1467302091917-c7ac18f83832?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80);">
-  <div class="container justify-content-center">
+  <div class="container">
     <h1 class="h1-landing"><strong>Ready to make a new friend?</strong></h1>
     <p>Search for new unique friends to book from our list of pets in Shanghai.</p>
 
-    <button class="btn btn-gradient"> <%= link_to "Get Started", new_user_session_path %> ></button>
+    <button class="btn btn-gradient"> <%= link_to "Get Started", new_user_session_path %></button>
   </div>
 </div>
