--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,14 +1,15 @@
 <div class="navbar border-bottom navbar-expand-sm navbar-light navbar-lewagon">
+
   <div class="container">
-    <%= link_to "#", class: "navbar-brand" do %>
-      <%# <%= image_tag "https://image.freepik.com/free-vector/chameleon-logo-design-illustration_105179-58.jpg"%>
-      <%# Crazy Pets %>
-    <% end %>
+
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
+      <%# <div class="container-fluid"> %>
+    <%# <a class="navbar-brand" href="#"> %>
+      <h1 class="h1-navbar">Crazy Pets</h1>
+    <%# </a> %>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
