--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -8,6 +8,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  margin-bottom: 12px;
 }
 
 .container-index {
@@ -25,4 +26,9 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
+}
+
+.form-container {
+  background-color: #ffa45a;
+  align-items: center;
 }
