--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -3,7 +3,8 @@ h1 {
   font-weight: bold;
   color: rgb(0, 0, 0);
   text-align: center;
-  margin-bottom: 12px;
+  margin-bottom: 14px;
+  margin-top: 14px;
 }
 
 h2 {
@@ -27,6 +28,11 @@ h3 {
   opacity: 0.6;
   color: rgb(0, 0, 0);
   text-align: center;
-  margin-bottom: 12px;
-  margin-top: 12px;
+  margin-bottom: 14px;
+  margin-top: 14px;
+}
+
+.h2-index {
+  color: white;
+  margin-bottom: 8px;
 }
