--- a/app/views/pets/new.html.erb
+++ b/app/views/pets/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>Add your crazy pet for rent to make $$$</h1>
   <div class="form-container">
-    <form style="text-align: center; margin-top: 4vw; margin-left: 4vw; margin-right: 4vw; font-weight:lighter; font-style: italic; font-size:1.2em;padding-bottom: 1em;">
+    <div style="text-align: center; margin-top: 4vw; margin-left: 4vw; margin-right: 4vw; font-weight:lighter; font-style: italic; font-size:1.2em;padding-bottom: 1em;">
       <%= simple_form_for [ @pet ] do |f| %>
         <%= f.input :photo, as: :file %>
         <%= f.input :name %>
@@ -9,7 +9,7 @@
         <%= f.input :price %>
         <%= f.input :species %>
         <%= f.submit "Add my pet", class: "btn btn-primary" %>
-    </form>
+    </div>
     </div>
     <% end %>
 </div>
