--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -31,4 +31,12 @@
 .form-container {
   background-color: #ffa45a;
   align-items: center;
+  text-align: center;
+  margin-top: 4vw;
+  margin-left: 4vw;
+  margin-right: 4vw;
+  font-weight:lighter;
+  font-style: italic;
+  font-size:1.2em;
+  padding-bottom: 1em;
 }
