--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -23,7 +23,7 @@
     </div>
 
     <div>
-    <h1>Other users want to rent your pets. Confirm or cancel.</h1>
+    <h2>Other users want to rent your pets. Click below to confirm or cancel👇.</h2>
           <% @my_bookings.each do |booking| %>
           <% if booking.pet.user == current_user %>
 
