updated background colors for the views

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -40,3 +40,23 @@
   font-size:1.2em;
   padding-bottom: 1em;
 }
+
+.index-banner-container {
+  display: flex;
+  background-color: #f9bc89;
+
+}
+
+.index-top-container {
+  margin-top: 2vw;
+  margin-left: 8vw;
+  margin-right: 8vw;
+}
+
+.mypets-container {
+  background-color: #f9bc89;
+}
+
+.bookings-container {
+  background-color: #f9bc89;
+}
