--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -24,7 +24,7 @@ h3 {
 }
 
 .h3-index {
-  font-size: 20px;
+  font-size: 32px;
   opacity: 0.6;
   color: rgb(0, 0, 0);
   text-align: center;
@@ -35,4 +35,22 @@ h3 {
 .h2-index {
   color: white;
   margin-bottom: 8px;
+}
+
+.h1-mypets {
+  font-size: 38px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-bottom: 14px;
+  margin-top: 14px;
+}
+
+.h1-mybookings {
+  font-size: 38px;
+  font-weight: bold;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  margin-bottom: 14px;
+  margin-top: 14px;
 }
