--- a/app/views/pets/my_pets.html.erb
+++ b/app/views/pets/my_pets.html.erb
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="mypets-container">
   <div id = "pets">
-    <h1>Your Pets</h1>
+    <h1 class="h1-mypets">Your Pets</h1>
 
     <div class="card-main">
       <% @my_pets.each do |pet| %>
