--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -3,8 +3,8 @@
   <div class="card-main">
     <div class="card-product-show">
       <div class="card-product-infos-show">
-        <% if @pet.photo.attached? %>
-          <%= cl_image_tag @pet.photo.key, height: 200 %>
+        <% if @booking.pet.photo.attached? %>
+          <%= cl_image_tag @booking.pet.photo.key, height: 200 %>
         <% end %>
         <p><strong>Pet:</strong> <%= @booking.pet.name %></p>
         <p><strong>Price to rent:</strong> $<%= @booking.pet.price %></p>
