updated bookings view

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -26,6 +26,9 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  background-color: #f9bc89;
+  margin-top: 2vw;
+  padding-top: 2em;
 }
 
 .form-container {
@@ -59,4 +62,10 @@
 
 .bookings-container {
   background-color: #f9bc89;
+}
+
+.bookings-container {
+
+  background-color: #f9bc89;
+
 }
