--- a/app/views/bookings/my_bookings.html.erb
+++ b/app/views/bookings/my_bookings.html.erb
@@ -1,7 +1,7 @@
 <div class="bookings-container">
         <%# <div id = "my_bookings" class = "container"> %>
 
-  <h1 class="mybookings">Your bookings!</h1>
+  <h1>Your bookings!</h1>
   <div class="index-container">
 
     <%# show the pets i have booked, i do not own the pets %>
