updated my bookings views

--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -60,12 +60,17 @@
   background-color: #f9bc89;
 }
 
-.bookings-container {
+/* .bookings-container {
+  /* background-color: #f9bc89; */
+  /* display: flex; } */
+
+
+.bookings-content-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
   background-color: #f9bc89;
-}
-
-.bookings-container {
-
-  background-color: #f9bc89;
-
+  margin-top: 2vw;
+  padding-top: 2em;
 }
