removed orange from some places

--- a/app/views/pets/my_pets.html.erb
+++ b/app/views/pets/my_pets.html.erb
@@ -2,7 +2,7 @@
   <div id = "pets">
     <h1 class="h1-mypets">Your Pets!</h1>
 
-    <div class="card-main">
+    <div>
       <% @my_pets.each do |pet| %>
       <%# <ul></ul> %>
       <div class="card-product">
