--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -26,7 +26,6 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-color: #f9bc89;
   margin-top: 2vw;
   padding-top: 2em;
 }
@@ -57,8 +56,7 @@
 }
 
 .mypets-container {
-  background-color: #f9bc89;
-}
+  /* background-color: #f9bc89; */}
 
 /* .bookings-container {
   /* background-color: #f9bc89; */
@@ -70,7 +68,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   flex-wrap: wrap;
-  background-color: #f9bc89;
+
   margin-top: 2vw;
   padding-top: 2em;
 }
